--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h1> Ayushi </h1><br>
         <P></P>
         <p></p>
-            <p>Welcome to my portfolio website! I'm a passionate and aspiring software engineer with a strong desire to create innovative solutions and push the boundaries of technology.With a deep love for coding and problem-solving, I am constantly seeking opportunities to learn and grow in this ever-evolving field</p>
+            <p> I'm a passionate and aspiring software engineer with a strong desire to create innovative solutions and push the boundaries of technology.With a deep love for coding and problem-solving, I am constantly seeking opportunities to learn and grow in this ever-evolving field</p>
             
             <div class="btn-group">
                 <a href="AYUSHI.pdf" class="btn   active">Download CV</a>
